<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StockManager</string>
    <string name="action_settings">Settings</string>
    <string name="action_bar_search">Search</string>
    <string name="action_bar_search_hint">ex: go goog google</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_enter_password">Enter password</string>
    <string name="hint_enter_password">password </string>
    <string name="btn_login">Login</string>
    <string name="title_option">Option</string>
    <string name="title_about">About</string>
    <string name="title_help">Help</string>
    <string name="title_forgot_password">Forgot password?</string>
    <string name="stock_detail_news">News</string>
    <string name="stock_detail_next">Next >></string>
    <string name="stock_detail_chart">Chart</string>
    <string name="stock_detail_prev">&lt;&lt; Prev</string>
    <string name="stock_detail_eps">EPS</string>
    <string name="stock_detail_vol_avg">Vol/Avg.</string>
    <string name="stock_detail_div_yield">Div/yield</string>
    <string name="stock_detail_open">Open</string>
    <string name="stock_detail_content_chart">Chart</string>
    <string name="stock_detail_p_e">P/E</string>
    <string name="stock_detail_52week">52week</string>
    <string name="stock_detail_mktcap">MktCap</string>
    <string name="stock_detail_range">Range</string>
    <string name="stock_detail_low">Low</string>
    <string name="stock_detail_52week_low">52w low</string>
    <string name="stock_detail_high">High</string>
    <string name="stock_detail_52week_high">52w high</string>
    <string name="stock_detail_volume">Volume</string>
    <string name="stock_detail_avg_vol">Avg Vol</string>
    <string name="stock_detail_shares">Shares</string>
    <string name="stock_detail_beta">Beta</string>
    <string name="stock_detail_delay">Delays</string>
    <string name="navigation_overview_title">Overview</string>
    <string name="navigation_portfolio_title">Portfolio</string>
    <string name="navigation_transaction_title">Transaction</string>
    <string name="stock_detail_note_add_title">Click to add note. </string>
    <string name="stock_detail_no_news">No news</string>
    <string name="stock_detail_load_more_news">Load more news</string>
    <string name="stock_detail_notes_label">Notes</string>
    <string name="stock_detail_transaction_statistics_label">Transaction statistics</string>
    <string name="stock_detail_transaction_statistics_general_avg_price">Avg</string>
    <string name="stock_detail_transaction_statistics_general_share">Shares</string>
    <string name="stock_detail_transaction_statistics_general_annual">Annual</string>
    <string name="stock_detail_transaction_statistics_general_annual_perc">Annual%</string>
    <string name="stock_detail_transaction_list_title">List</string>
    <string name="stock_detail_transaction_list_date_title">Date</string>
    <string name="stock_detail_transaction_list_shares_title">Shares</string>
    <string name="stock_detail_transaction_list_price_title">Price</string>
    <string name="stock_detail_transaction_list_profit_title">Profit</string>
    <string name="stock_detail_transaction_empty">No transaction.</string>
    <string name="empty_string"></string>
    <string name="about_about_title">About</string>
    <string name="about_developer_title">Developer</string>
    <string name="about_contact_title">Contact</string>
    <string name="zero">0</string>
    <string name="Name">Name:</string>
    <string name="currentMoney">Current Money:</string>
    <string name="investedMoney">Invested Money:</string>
    <string name="overviewHeader">Account Overview Information</string>
    <string name="transactionHistoryHeader">Transaction History</string>
    <string name="sortbyLabel">Sort by</string>
    <string name="transactionSortbySymbolTogglebtn">Symbol</string>
    <string name="transactionSortbyPriceTogglebtn">Price</string>
    <string name="transactionSortbySharesTogglebtn">Shares</string>
    <string name="transTableType">Type</string>
    <string name="transTableDate">Date</string>
    <string name="transTableSymbol">Sym</string>
    <string name="transTableShares">Shares</string>
    <string name="transTablePrice">Price</string>
    <string name="transTableCommision">Comm</string>
    <string name="insidePortfolioHeader">Portfolio</string>
    <string name="stock">Stock</string>
    <string name="shares">Shares</string>
    <string name="currentPrice">Current Price</string>
    <string name="totalCurrentStockValue">Total Owned Stock:</string>
    <string name="totalCurrentProfit">Current Profit:</string>
    <string name="portfolioStatisticLabel">PORTFOLIO STATISTIC</string>
    <string name="portfolioDayGain">Day\'s Gain</string>
    <string name="portfolioGainPercent">Gain%</string>
    <string name="portfolioGain">Gain</string>
    <string name="portfolioCostBasic">CostBasic</string>
    <string name="portfolioMktValue">MktValue</string>
    <string name="portfolioOverallReturn">Overall</string>
    <string name="StockCode">Stock Code:</string>
    <string name="Type">Type:</string>
    <string name="Price">Price:</string>
    <string name="Shares">Shares:</string>
    <string name="Commission">Commission:</string>
    <string name="Date">Date:</string>
    <string name="Buy">Buy</string>
    <string name="Sell">Sell</string>
    <string name="value">Value:</string>
    <string name="changes">Changes:</string>
    <string name="real_time">realtime</string>
    <string name="search_result_title">Search result</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="Save">Save</string>
    <string name="symbol">Symbol:</string>
    <string name="refresh">Refresh</string>
    <string name="first_time_intro">This application require password on first use.</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="export_all">Export all data</string>

</resources>