<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5.0dip"
        android:orientation="horizontal"
        android:weightSum="9" >

        <ToggleButton
            android:id="@+id/transactionSortbySymbolTogglebtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textOff="@string/transactionSortbySymbolTogglebtn"
            android:textOn="@string/transactionSortbySymbolTogglebtn" />

        <ToggleButton
            android:id="@+id/transactionSortbyPriceTogglebtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textOff="@string/transactionSortbyPriceTogglebtn"
            android:textOn="@string/transactionSortbyPriceTogglebtn" />

        <ToggleButton
            android:id="@+id/transactionSortbySharesTogglebtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textOff="@string/transactionSortbySharesTogglebtn"
            android:textOn="@string/transactionSortbySharesTogglebtn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="15" >

        <TextView
            android:id="@+id/transTableType"
            style="@style/transaction_table_style"
            android:layout_weight="2"
            android:text="@string/transTableType" />

        <TextView
            android:id="@+id/transTableDate"
            style="@style/transaction_table_style"
            android:layout_weight="3"
            android:text="@string/transTableDate" />

        <TextView
            android:id="@+id/transTableSymbol"
            style="@style/transaction_table_style"
            android:layout_weight="2"
            android:text="@string/transTableSymbol" />

        <TextView
            android:id="@+id/transTableShares"
            style="@style/transaction_table_style"
            android:layout_weight="3"
            android:text="@string/transTableShares" />

        <TextView
            android:id="@+id/transTablePrice"
            style="@style/transaction_table_style"
            android:layout_weight="2"
            android:text="@string/transTablePrice" />

        <TextView
            android:id="@+id/transTableCommision"
            style="@style/transaction_table_style"
            android:layout_weight="3"
            android:text="@string/transTableCommision" />
    </LinearLayout>

<ListView 
    android:id="@+id/transaction_history_list"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
</ListView>
</LinearLayout>