<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip" >

        <TextView
            android:id="@+id/addTransactionType"
            style="@style/add_edit_transaction_style"
            android:text="@string/Type" />

        <RadioGroup
            android:id="@+id/add_transaction_type"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="8.0dip"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/type_sell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8.0dip"
                android:text="@string/Sell"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/type_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:gravity="center"
                android:text="@string/Buy"
                android:textSize="15sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip" >

        <TextView
            style="@style/add_edit_transaction_style"
            android:text="@string/empty_string" />

        <CheckBox
            android:id="@+id/add_edit_is_bonus_check"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="Bonus Stock" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip" >

        <TextView
            android:id="@+id/addTransactionPrice"
            style="@style/add_edit_transaction_style"
            android:text="@string/Price" />

        <EditText
            android:id="@+id/addTransactionPriceBox"
            style="@style/add_edit_transaction_edit_text_style"
            android:inputType="numberDecimal"
            android:text="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip" >

        <TextView
            android:id="@+id/addTransactionShares"
            style="@style/add_edit_transaction_style"
            android:text="@string/Shares" />

        <EditText
            android:id="@+id/addTransactionSharesBox"
            style="@style/add_edit_transaction_edit_text_style"
            android:inputType="number"
            android:text="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip" >

        <TextView
            android:id="@+id/addTransactionCommissionTitle"
            style="@style/add_edit_transaction_style"
            android:text="Commission:" />

        <EditText
            android:id="@+id/addTransactionCommision"
            style="@style/add_edit_transaction_edit_text_style"
            android:inputType="numberDecimal"
            android:text="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip" >

        <TextView
            android:id="@+id/addTransactionDate"
            style="@style/add_edit_transaction_style"
            android:text="@string/Date" />

        <EditText
            android:id="@+id/addTransactionDatePicker"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:weightSum="10" >

        <Button
            android:id="@+id/Add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="Add" />

        <Button
            android:id="@+id/Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="Cancel" />
    </LinearLayout>

</LinearLayout>